Canary_ReqTimeOut/q.Canary_L7_ReqTimeOut.internet_1.10/ingress/hello-app-sm-enabled-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-sm-enabled-ingress
  annotations:
    #kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.class: sample-nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod   
spec:
  tls:
  - hosts:
    - hw3-29062021.tetarwal.de
    secretName: hello-app-sm-enabled-tls-hw
  rules:
  - host: "hw3-29062021.tetarwal.de"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-app-sm-enabled
            port:
              number: 80
